@@ -26,6 +26,8 @@
 #include <stdarg.h>
 #include <stdio.h>
 
+#include "compat.h"
+
 int
 vsnprintf(char *buf, size_t maxsize, const char *fmt, va_list args)
 {
