@@ -5,6 +5,8 @@ dpkg (1.17.11) UNRELEASED; urgency=low
     latter is available (round two). This includes the quilt patch header
     templates, and examples in man pages.
   * Update some dpkg git URLs to the new and newer (cgit switch) scheme.
+  * Changes to libcompat:
+    - Make the library testable.
 
   [ Updated programs translations ]
   * Danish (Joe Dalton). Closes: #754127
